// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleTextQuestionSchema indexName should not be empty 1`] = `
"1 validation issue(s)

  Issue #0: too_small at indexName
  Should be at least 1 characters
"
`;

exports[`MultipleTextQuestionSchema indexName should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at indexName
  Expected string, received null
"
`;

exports[`MultipleTextQuestionSchema indexName should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at indexName
  Required
"
`;

exports[`MultipleTextQuestionSchema placeholder should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at placeholder
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_literal_value at type
  Input must be \\"MultipleText\\"
"
`;

exports[`MultipleTextQuestionSchema variableName should not be empty 1`] = `
"1 validation issue(s)

  Issue #0: too_small at variableName
  Should be at least 1 characters
"
`;

exports[`MultipleTextQuestionSchema variableName should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at variableName
  Expected string, received null
"
`;

exports[`MultipleTextQuestionSchema variableName should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at variableName
  Required
"
`;
